--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "styled-components": "^5.3.9",
     "vanilla-autokana": "^1.3.0"
   },
   "devDependencies": {
