--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-build": "next build",
+    "dev-build": "env NODE_ENV='local' next build",
     "build": "env NODE_ENV='production' next build",
     "start": "next start",
     "lint": "next lint",
